--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,44 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="io.github.kafumi.viewbindingsamples.MainActivity">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ListView
-        android:id="@+id/items_list"
+    <data>
+        <variable
+            name="activity"
+            type="io.github.kafumi.viewbindingsamples.MainActivity" />
+    </data>
+
+    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context="io.github.kafumi.viewbindingsamples.MainActivity">
 
-    <TextView
-        android:id="@+id/list_empty_message"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="@string/message_no_item"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="bottom"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/new_item_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+        <ListView
+            android:id="@+id/items_list"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:hint="@string/item_name" />
+            android:onItemClick="@{activity::onItemClick}"/>
 
-        <Button
-            android:id="@+id/add_item"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/list_empty_message"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/message_no_item"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/add_item" />
-    </LinearLayout>
+            android:gravity="bottom"
+            android:orientation="horizontal">
 
-</LinearLayout>
+            <EditText
+                android:id="@+id/new_item_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="@string/item_name" />
+
+            <Button
+                android:id="@+id/add_item"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/add_item"
+                android:onClick="@{activity::addItem}"/>
+        </LinearLayout>
+
+    </LinearLayout>
+</layout>
